# hexpm-mcp

./: .arsenale.exs  .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  fly.toml  mix.exs  release-please-config.json
.github/workflows/: ci.yml  deploy.yml  release-please.yml
config/: config.exs  runtime.exs  test.exs
lib/: hexpm_mcp.ex
lib/hexpm_mcp/: application.ex  cache.ex  client.ex  formatter.ex  hexdocs.ex  osv.ex  types.ex
lib/hexpm_mcp/mcp/: router.ex  server.ex
lib/hexpm_mcp/mcp/prompts/: analyze_package.ex  compare_packages.ex  evaluate_dependencies.ex  migration_guide.ex  recommend_packages.ex
lib/hexpm_mcp/mcp/resources/: package_docs.ex  package_info.ex  package_readme.ex
lib/hexpm_mcp/mcp/tools/: alternatives.ex  audit.ex  audit_mix_deps.ex  compare.ex  dep_tree.ex  dependencies.ex  doc_item.ex  docs.ex  downloads.ex  features.ex  health.ex  info.ex  owners.ex  readme.ex  release.ex  reverse.ex  search.ex  search_docs.ex  upgrade_check.ex  versions.ex
src/: client.rs  lib.rs  main.rs  state.rs  types.rs
src/tools/: alternatives.rs  audit.rs  compare.rs  dependencies.rs  downloads.rs  health.rs  info.rs  mod.rs  owners.rs  release.rs  reverse.rs  search.rs
test/: hexpm_mcp_test.exs
test/hexpm_mcp/: cache_test.exs  client_test.exs  formatter_test.exs  hexdocs_test.exs
test/support/: fixtures.ex
tests/: hex_api.rs  integration.rs
